plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.4.10'
}

group 'at.wtioit.intellij.plugins'
version '0.4.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.28.2'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    // it seems we cannot use 2019.1 here
    version '2019.2'
    type 'PC'
}

// enable this to run in IntelliJ Idea Community Edition
/*intellij {
    version '2019.2.3'
    type 'IC'
    plugins 'PythonCore:2019.2.192.6262.41'
}*/

runIde {
    // enable DebugAttachDetector
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}


patchPluginXml {
//    changeNotes """
//      Add change notes here.<br>
//      <em>most HTML tags may be used</em>"""
}